@@ -34,8 +34,8 @@ public class Dichiarazione_intentoHome extends BulkHome {
 	public void initializePrimaryKeyForInsert(it.cnr.jada.UserContext userContext,it.cnr.jada.bulk.OggettoBulk esportatore) throws it.cnr.jada.persistency.PersistencyException {
 		try {
 			((Dichiarazione_intentoBulk) esportatore).setProgr(
-				new Integer(
-					((Integer)findAndLockMax( esportatore, "progr", new Integer(0))).intValue()+1
+				Integer.valueOf(
+					((Integer)findAndLockMax( esportatore, "progr", Integer.valueOf(0))).intValue()+1
 				)
 			);
 		} catch(it.cnr.jada.bulk.BusyResourceException e) {
