@@ -45,8 +45,8 @@ public class Inventario_beni_apgHome extends BulkHome {
 	public void initializePrimaryKeyForInsert(UserContext usercontext,OggettoBulk oggettobulk)throws PersistencyException, it.cnr.jada.comp.ComponentException {
 		try {
 		((Inventario_beni_apgBulk)oggettobulk).setPg_riga(
-		new Long(
-		((Long)findAndLockMax( oggettobulk, "pg_riga", new Long(0) )).longValue()+1));
+		Long.valueOf(
+		((Long)findAndLockMax( oggettobulk, "pg_riga", Long.valueOf(0) )).longValue()+1));
 		} catch(it.cnr.jada.bulk.BusyResourceException e) {
 		throw new PersistencyException(e);
 		} 
