@@ -24,8 +24,9 @@ import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.Iterator;
 import java.util.List;
-import javax.servlet.ServletException;
-import javax.servlet.jsp.PageContext;
+
+import jakarta.servlet.ServletException;
+import jakarta.servlet.jsp.PageContext;
 import javax.xml.parsers.*;
 import javax.xml.transform.*;
 import javax.xml.transform.stream.*;
@@ -81,14 +82,14 @@ public class RicercaMissioniBP extends BusinessProcess implements ResponseXMLBP{
 	}
 	private Element generaNumeroMissioni(Document xmldoc){
 		Element e = xmldoc.createElement("numris");
-		Node n = xmldoc.createTextNode(new Integer(getMissioni().size()).toString());
+		Node n = xmldoc.createTextNode(Integer.valueOf(getMissioni().size()).toString());
     	e.appendChild(n);
     	return e;	
 	}
-	public void generaXML(PageContext pagecontext) throws IOException, ServletException{
+	public void generaXML(PageContext pagecontext) throws IOException, ServletException {
 		try {
 			if (getNumMax()==null)
-				setNumMax(new Integer(20));
+				setNumMax(Integer.valueOf(20));
 	    	DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
 	    	DocumentBuilder builder = factory.newDocumentBuilder();
 	    	DOMImplementation impl = builder.getDOMImplementation();
