@@ -39,7 +39,7 @@ import it.cnr.jada.persistency.*;
 import it.cnr.jada.persistency.beans.*;
 import it.cnr.jada.persistency.sql.*;
 
-import javax.ejb.EJBException;
+import jakarta.ejb.EJBException;
 
 public class Missione_tipo_pastoHome extends BulkHome implements ConsultazioniRestHome {
 	public Missione_tipo_pastoHome(java.sql.Connection conn) {
@@ -186,12 +186,12 @@ public class Missione_tipo_pastoHome extends BulkHome implements ConsultazioniRe
 								operator == SQLBuilder.EQUALS) {
 							NazioneHome nazionehome = (NazioneHome) getHomeCache().getHome(NazioneBulk.class);
 							Double str = (Double) clause.getValue();
-							nazioneBulk = new NazioneBulk(new Long(str.longValue()));
+							nazioneBulk = new NazioneBulk(Long.valueOf(str.longValue()));
 							nazioneBulk = (NazioneBulk) nazionehome.findByPrimaryKey(nazioneBulk);
 						} else if (clause.getPropertyName() != null && clause.getPropertyName().equals("inquadramento") &&
 								operator == SQLBuilder.EQUALS) {
 							Double str = (Double) clause.getValue();
-							inquadramento = new Long(str.longValue());
+							inquadramento = Long.valueOf(str.longValue());
 						} else if (clause.getPropertyName() != null && clause.getPropertyName().equals("data") &&
 								operator == SQLBuilder.EQUALS) {
 							SimpleDateFormat dateFormat = new SimpleDateFormat("dd/MM/yyyy");
@@ -218,7 +218,7 @@ public class Missione_tipo_pastoHome extends BulkHome implements ConsultazioniRe
 		}
 		return sql;
 	}
-	private MissioneComponentSession missioneComponent() throws javax.ejb.EJBException, java.rmi.RemoteException {
+	private MissioneComponentSession missioneComponent() throws jakarta.ejb.EJBException, java.rmi.RemoteException {
 		return (MissioneComponentSession)it.cnr.jada.util.ejb.EJBCommonServices.createEJB("CNRMISSIONI00_EJB_MissioneComponentSession");
 	}
 	private Boolean isCondizioneTipiPastoMissione(Enumeration e) {
