@@ -47,7 +47,7 @@ public class GestionePagopaHome extends BulkHome {
 		try {
 			GestionePagopaBulk atto = (GestionePagopaBulk)oggettobulk;
 			atto.setId(
-					new Integer(((Integer)findAndLockMax( oggettobulk, "id", new Integer(0) )).intValue()+1));
+					Integer.valueOf(((Integer)findAndLockMax( oggettobulk, "id", Integer.valueOf(0) )).intValue()+1));
 			super.initializePrimaryKeyForInsert(usercontext, atto);
 		} catch(it.cnr.jada.bulk.BusyResourceException e) {
 			throw new PersistencyException(e);
