@@ -61,12 +61,12 @@ public class ConsPDGPFoBP extends ConsultazioniBP {
 
 	private boolean flNuovoPdg = false;
 
-	public ConsPDGPFoComponentSession createPdgpFoComponentSession() throws javax.ejb.EJBException,java.rmi.RemoteException {
+	public ConsPDGPFoComponentSession createPdgpFoComponentSession() throws jakarta.ejb.EJBException,java.rmi.RemoteException {
 		
 		   return (ConsPDGPFoComponentSession)it.cnr.jada.util.ejb.EJBCommonServices.createEJB("CNRPREVENT01_EJB_ConsPDGPFoComponentSession", ConsPDGPFoComponentSession.class);
 	}
 
-	   public Classificazione_vociComponentSession createClassificazioneVociComponentSession() throws javax.ejb.EJBException,java.rmi.RemoteException {
+	   public Classificazione_vociComponentSession createClassificazioneVociComponentSession() throws jakarta.ejb.EJBException,java.rmi.RemoteException {
 		   return (Classificazione_vociComponentSession)it.cnr.jada.util.ejb.EJBCommonServices.createEJB("CNRCONFIG00_EJB_Classificazione_vociComponentSession",Classificazione_vociComponentSession.class);
 	   }
 
@@ -134,8 +134,8 @@ public class ConsPDGPFoBP extends ConsultazioniBP {
 					
 
 			 anno_corrente = CNRUserContext.getEsercizio(context.getUserContext()).toString();
-			 anno_successivo = new Integer(CNRUserContext.getEsercizio(context.getUserContext()).intValue() + 1).toString();
-			 anno_successivo_successivo = new Integer(CNRUserContext.getEsercizio(context.getUserContext()).intValue() + 2).toString();
+			 anno_successivo = Integer.valueOf(CNRUserContext.getEsercizio(context.getUserContext()).intValue() + 1).toString();
+			 anno_successivo_successivo = Integer.valueOf(CNRUserContext.getEsercizio(context.getUserContext()).intValue() + 2).toString();
 			
 			 
 			   if (livello_destinazione.equals(this.LIVELLO_DET))
@@ -281,12 +281,12 @@ public class ConsPDGPFoBP extends ConsultazioniBP {
 					   setDs_livello1(createClassificazioneVociComponentSession().getDsLivelloClassificazione(userContext, 
 																											  CNRUserContext.getEsercizio(userContext),
 																											  Elemento_voceHome.GESTIONE_SPESE,
-																											  new Integer(Classificazione_vociHome.LIVELLO_PRIMO)));
+																											  Integer.valueOf(Classificazione_vociHome.LIVELLO_PRIMO)));
 				   else
 					   setDs_livello1(createClassificazioneVociComponentSession().getDsLivelloClassificazione(userContext, 
 																											  CNRUserContext.getEsercizio(userContext),
 																											  Elemento_voceHome.GESTIONE_ENTRATE,
-																											  new Integer(Classificazione_vociHome.LIVELLO_PRIMO)));
+																											  Integer.valueOf(Classificazione_vociHome.LIVELLO_PRIMO)));
 			   }
 			   return getDs_livello1();
 		   }catch(Throwable e) {
@@ -306,12 +306,12 @@ public class ConsPDGPFoBP extends ConsultazioniBP {
 					   setDs_livello2(createClassificazioneVociComponentSession().getDsLivelloClassificazione(userContext, 
 																											  CNRUserContext.getEsercizio(userContext),
 																											  Elemento_voceHome.GESTIONE_SPESE,
-																											  new Integer(Classificazione_vociHome.LIVELLO_SECONDO)));
+																											  Integer.valueOf(Classificazione_vociHome.LIVELLO_SECONDO)));
 				   else
 					   setDs_livello2(createClassificazioneVociComponentSession().getDsLivelloClassificazione(userContext, 
 																											  CNRUserContext.getEsercizio(userContext),
 																											  Elemento_voceHome.GESTIONE_ENTRATE,
-																											  new Integer(Classificazione_vociHome.LIVELLO_SECONDO)));
+																											  Integer.valueOf(Classificazione_vociHome.LIVELLO_SECONDO)));
 			   }
 			   return getDs_livello2();
 		   }catch(Throwable e) {
@@ -376,12 +376,12 @@ public class ConsPDGPFoBP extends ConsultazioniBP {
 							 setDs_livello3(createClassificazioneVociComponentSession().getDsLivelloClassificazione(userContext, 
 																													CNRUserContext.getEsercizio(userContext),
 																													Elemento_voceHome.GESTIONE_SPESE,
-																													new Integer(Classificazione_vociHome.LIVELLO_TERZO)));
+																													Integer.valueOf(Classificazione_vociHome.LIVELLO_TERZO)));
 						 else
 							 setDs_livello3(createClassificazioneVociComponentSession().getDsLivelloClassificazione(userContext, 
 																													CNRUserContext.getEsercizio(userContext),
 																													Elemento_voceHome.GESTIONE_ENTRATE,
-																													new Integer(Classificazione_vociHome.LIVELLO_TERZO)));
+																													Integer.valueOf(Classificazione_vociHome.LIVELLO_TERZO)));
 					 }
 					 return getDs_livello3();
 				 }catch(Throwable e) {
